# job-application-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  demo_profile.json  docker-compose.yml  fly.toml  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/hooks/: validate-edit.sh
.claude/skills/: regression-test.md
.github/: dependabot.yml
.github/workflows/: ci.yml  cron.yml  deploy.yml  validate-catalog.yml
alembic/: env.py
alembic/versions/: 021ead969ebc_add_slug_fetches_and_match_queue.py  05b608a37f60_add_events_table_for_in_app_analytics.py  25a70e8d5968_add_salary_and_contract_type_to_jobs.py  4a27b82fcbb9_add_application_match_summary.py  5a6b7c8d9e0f_phase_b_migration_2_drop_legacy_queue_columns.py  7a3f0db5b7ba_add_applied_at.py  84325e37e095_add_standard_answers_and_submission_.py  8bdb4dedbd38_drop_user_interest_from_applications.py  8fa8c82211c3_add_companies_is_curated.py  97c970fc78e2_phase_b_migration_1_work_queue_and_app_.py  9c4e8a2bd6f1_simplification_cleanup.py  a12c32a0c7cd_add_target_company_slugs.py  a8c7115b85f5_add_user_interest_to_applications.py  ac99d59f1079_add_llm_status_usage_counters_rate_.py  add76003700d_add_job_description_clean.py  b4f9c3e10d2a_datetime_columns_to_timestamptz.py  b7c8d9e0f1a2_add_llm_match_batches.py  bf8093d778c9_add_companies_and_rename_description.py  c2f4610cf147_add_companies_tags.py  c9d0e1f2a3b4_add_batch_item_request_position.py  cfd76b2ed274_initial_schema.py  d7e2b40a5301_backfill_null_job_description.py  d7e2b40a5301_reclean_jobs_description.py  d8f2c4a9b1e7_add_jobs_content_hash.py  e1f2a3b4c5d6_add_subscription_entitlements.py  e4f5a6b7c8d9_add_feedback_reports.py  f3a1b2c4d5e6_generation_status_default_none.py
app/: config.py  database.py  main.py
app/agents/: generation_agent.py  llm_safe.py  matching_agent.py  onboarding.py  test_llm.py
app/api/: applications.py  auth.py  chat.py  companies.py  deps.py  (+10 more)
docs/: DEPLOYMENT.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
scripts/: alembic_safe.py  analytics_views.sql  backfill_job_description_clean.py  backfill_job_salaries.py  check_rematch_drained.py  compare_jd_cleaning.py  enqueue_batch_match_canary.py  make_smoke_token.py  neon_egress_diagnostics.sql  recover_error_matches.py  rematch_account.py  seed_demo_profile.py  seed_smoke_user.py  wipe_job_data.py
tests/: conftest.py
(+401 files in other folders)
