[project]
name = "job-application-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.46.0",
    "sqlmodel>=0.0.38",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic-settings>=2.4",
    "httpx>=0.28.1",
    "structlog>=24.4",
    "markdownify>=0.13",
    "markdown2>=2.4",
    "pypdf>=4.0",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.28",
    "fastapi-users[sqlalchemy]>=15.0.5",
    "httpx-oauth>=0.16.1",
    "langchain>=1.3.0",
    "langchain-google-genai>=4.2.2",
    "google-api-core>=2.0",
    "langgraph>=1.2.0",
    "langgraph-checkpoint-postgres>=3.1.0",
    "psycopg[binary]>=3.1",
    "langsmith>=0.1",
    "fpdf2>=2.8",
    "trafilatura>=2.0.0",
    "beautifulsoup4>=4.12",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "anyio>=4.0",
    "respx>=0.21",
    "testcontainers[postgres]>=4.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=4.6.0",
    "asgi-lifespan>=2.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "catalog_live: hits real public ATS boards; only run with --catalog-live.",
]
